# showcase

./: .gitignore  .travis.yml  CNAME  Cargo.toml  EVAL.md  README.md  data.yml  index.html
.github/: bors.toml
.github/workflows/: ci.yml
ci/: after-success.sh  install.sh  script.sh
css/: main.css
src/: main.rs
templates/: index.html
